# Hardware-software-vision-systems

./: .gitignore  CMakeLists.txt  README.md
ald/: CMakeLists.txt  main.cpp
ald/include/: coefficients.hpp  objectParameters.hpp  utilities.hpp
ald/source/: main.cpp  objectParameters.cpp  utilities.cpp
include/: ImageProcessor.hpp  coefficients.hpp  objectParameters.hpp  utilities.hpp
source/: ImageProcessor.cpp  main.cpp  objectParameters.cpp  utilities.cpp
